--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <!-- Buildings section -->
     <div id="buildings">
-        <button class="build-btn" id="buildAntHutBtn" onclick="buyAnthut()" style="display:none;">
-        Build Anthut (+2 max ants, Cost: 10 Sugarcrystals)
+        <button class="build-btn" id="buildAnthutBtn" onclick="buyAnthut()" style="display:none;">
+        
         </button>
         <!-- Add more building buttons here if needed -->
     </div>
