fixed sugar not filling

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <button id="btnAntLumberPlus">+</button>
         </span><br>
         <span id="scienceAntLine" style="display:none;">
-          science Ant:
+          Science Ant:
           <button id="btnAntscienceMinus">-</button>
           <span id="antsScience">0</span>
           <button id="btnAntsciencePlus">+</button>
