level 1 sacrifeces work

--- a/index.html
+++ b/index.html
@@ -180,11 +180,7 @@
     <div class="ants-right" id="sacrificePanel">
   <h2>Sacrifice Ants</h2>
   <p>Sacrifice ants to gain temporary buffs.</p>
-  
-  <!-- Sacrifice Ant for Blood -->
-  <div id="sacrificeBloodContainer" style="display:none; margin-top:10px;">
-    <button id="btnSacrificeAnt">Sacrifice 1 Ant → +1 Blood</button>
-  </div>
+
   <!-- Shared global controls -->
   <div class="sacrifice-controls">
     <button id="btnSacMinus">-</button>
@@ -192,21 +188,10 @@
     <button id="btnSacPlus">+</button>
   </div>
 
-
+  <div id = "sacrificeContainer"></div>
   <!-- Individual spell info -->
-  <div id="sacrificeWater" class="sacrifice-option" style="display:none;">
-    <h3>Water Blessing</h3>
-    Level: <span id="sacWaterLevel">0</span><br>
-    Effect: <span id="sacWaterEffect">0%</span><br>
-    Time Remaining: <span id="sacWaterTime">0s</span>
-  </div>
 
-  <div id="sacrificeOwl" class="sacrifice-option" style="display:none;">
-    <h3>Owl Wisdom</h3>
-    Level: <span id="sacOwlLevel">0</span><br>
-    Effect: <span id="sacOwlEffect">0%</span><br>
-    Time Remaining: <span id="sacOwlTime">0s</span>
-  </div>
+
   </div>
   </div>
 
