move things to its own file

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     </div>
 
     <div class="grid-row grid-3">
-      <div class="tooltip" style="display: block;">
+      <div class="tooltip" style="display:none">
         <button id="collectWaterBtn" class="main-btn">Collect Water</button>
-        <span class="tooltiptext">Collect 2 water</span>
+        <span id='collectWaterTooltip'class="tooltiptext">Collect 2 water</span>
       </div>
 
-      <div class="tooltip" style="display: block;">
+      <div class="tooltip" style="display:none">
         <button id="collectSugarBtn" class="main-btn">Collect Sugar</button>
-        <span class="tooltiptext">Cost 10 water to collect 1 sugar crystal</span>
+        <span id='collectSugarTooltip' class="tooltiptext">Cost 10 water to collect 1 sugar crystal</span>
       </div>
 
-      <div class="tooltip" style="display: block;">
+      <div class="tooltip" style="display:none">
         <button id="collectWoodBtn" class="main-btn">Collect Wood</button>
-        <span class="tooltiptext">Cost 2 water to collect 1 wood splinter</span>
+        <span id='collectWoodTooltip' class="tooltiptext">Cost 2 water to collect 1 wood splinter</span>
       </div>
     </div>
 
